# ETL-1

./: .gitignore  README.md  main.py  pyproject.toml
database/: README.md  SCHEMA_DIAGRAM.md  create_db.py  db_manager.py  schema.sql  schema_extensions.sql
scripts/extract/: download_open_food_facts.py  scrape_marmiton.py  scrape_marmiton_ingredients.py
scripts/load/: load_recipes_and_ingredients.py  load_to_sqlite.py  match_recipes_with_ingredients.py  query_examples.py  verify_data.py
scripts/transform/: filter_marmiton_recipes.py  filter_openfoodfacts.py  link_ingredients.py  mark_usable_products.py  match_ingredients.py  match_products_with_ingredients.py
website/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
website/src/lib/: db.ts
website/src/lib/components/: AddRecipeModal.svelte  FoodCard.svelte  FoodDetails.svelte  Header.svelte  IngredientsRecipesMenu.svelte  ProductDetails.svelte  RecipeModal.svelte  ScrollArea.svelte
website/src/lib/types/: index.ts
website/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
website/src/routes/api/foods/: +server.ts
website/src/routes/api/foods/[code]/recipes/: +server.ts
website/src/routes/api/ingredients/: +server.ts
website/src/routes/api/recipes/: +server.ts
website/src/routes/ingredients/: +page.svelte
website/src/routes/recipes/: +page.svelte
