[project]
name = "etl-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "python-marmiton>=0.4.2",
    "recipe-scrapers>=15.9.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
